Update to Xposed API v82

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,10 @@ android {
     }
 }
 
+repositories {
+    jcenter();
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided files('src/main/lib/XposedBridgeApi-54.jar')
+    provided 'de.robv.android.xposed:api:82'
 }
